# Managing-students-after-graduation

./: .dockerignore  .env  .env.example  .gitignore  .phpunit.result.cache  Dockerfile.frontend  README.md  alembic.ini  commit_msg.txt  composer.bat  composer.json  config.py  database.sql  gui.py  package-lock.json  package.json  phpunit.xml  pyproject.toml  pytest.ini  requirements.txt  reset_admin.py  run.py  schema_postgresql.sql  seed_data.py  tailwind.config.js
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py
app/Http/: Kernel.php
app/Models/: User.php
app/Providers/: AppServiceProvider.php
app/middleware/: __init__.py  jwt_auth.py
app/models/: __init__.py  base.py  hso_xet_tuyen.py  khoa.py  kq_hoc_tap.py  lop.py  mon_hoc.py  nganh.py  pt_xet_tuyen.py  quan_tri.py  sinh_vien.py  thong_bao.py  tk_xet_tuyen.py  tot_nghiep.py
app/routes/: __init__.py  auth_routes.py  hoc_tap_routes.py  khoa_routes.py  lop_routes.py  mon_hoc_routes.py  nganh_routes.py  quan_tri_routes.py  sinh_vien_routes.py  thong_bao_routes.py  tot_nghiep_routes.py  tuyen_sinh_routes.py
app/schemas/: __init__.py
app/services/: __init__.py  auth_service.py  base_service.py  hoc_tap_service.py  khoa_service.py  lop_service.py  nganh_service.py  (+5 more)
apps/: __init__.py
backend/: main.py
bootstrap/: app.php
config/: app.php  auth.php  database.php  livewire.php
docs/: AUTH.md  HocTap.md  Khoa.md  Lop.md  MonHoc.md  Nganh.md  SinhVien.md  ThongBao.md  TotNghiep.md  TuyenSinh.md
frontend/: main.py
frontend_gui/: __init__.py  requirements.txt
modules/: README.md
routes/: api.php  web.php
scripts/: seed.py
tests/: test_auth.py  test_business_rules.py  test_candidate_removed.py  test_gpa.py  test_grade.py
(+191 files in other folders)
